--- a/web/RegistroMascotaPorCliente.xhtml
+++ b/web/RegistroMascotaPorCliente.xhtml
@@ -18,7 +18,7 @@
                     <p:panel>
                         <f:facet name="header">
                             <column>
-                                <p:outputLabel value="MANTENIMIENTO CLIENTE"/>  
+                                <p:outputLabel value="MANTENIMIENTO CLIENTE POR MASCOTA "/>  
                             </column>
                         </f:facet>
                         <h:panelGrid columns="2">
@@ -44,35 +44,29 @@
                                 <f:selectItem itemLabel="activo" itemValue="A"/>
                                <f:selectItem itemLabel="inactivo" itemValue="I" />
                             </p:selectOneMenu>
-            
                         </h:panelGrid>
                         <p:commandButton value="Guardar" action="#{mascotaPorClienteBean.guardar()}" update=":data:datatable,:from"/>
-                        <p:commandButton value="Actualizar" action="#{mascotaPorClienteBean.actualizarCliente()}" update=":data:datatable,:from"/>
+                        <p:commandButton value="Actualizar" action="#{mascotaPorClienteBean.actualizar()}" update=":data:datatable,:from"/>
                     </p:panel>
                 </h:form>
                 <p:panel>
                     <h:form id="data">
-                        <p:dataTable rowKey="#{cliente.idCliente}" selection="#{clienteBean.cliente}" selectionMode="single" 
-                                     id="datatable" var="cliente" value="#{clienteBean.listarClientes()}">
+                        <p:dataTable rowKey="#{mascotaporcliente.id}" selection="#{mascotaPorClienteBean.mascotaporcliente}" selectionMode="single" 
+                                     id="datatable" var="mascotaporcliente" value="#{mascotaPorClienteBean.listar()}">
                             <p:ajax update=":from" event="rowSelect" />
-                            <p:column headerText="Codigo">
-                                <h:outputText value="#{cliente.idCliente}"/>
+                           
+                            <p:column headerText="mascota">
+                                <h:outputText value="#{mascotaporcliente.mascota.idMascota}"/>
                             </p:column>
-                            <p:column headerText="Nombre del Cliente">
-                                <h:outputText value="#{cliente.nombre}"/>
+                            <p:column headerText="cliente">
+                                <h:outputText value="#{mascotaporcliente.cliente.idCliente}"/>
                             </p:column>
-                            <p:column headerText="Apellido del Cliente">
-                                <h:outputText value="#{cliente.apellido}"/>
-                            </p:column>
-                            <p:column headerText="Telefono">
-                                <h:outputText value="#{cliente.telefono}"/>
-                            </p:column>
-                            <p:column headerText="Fecha Nacimiento">
-                                <h:outputText value="#{cliente.fechaNacimiento}"/>
+                             <p:column headerText="estado">
+                                 <h:outputText value="#{mascotaporcliente.estado}"/>
                             </p:column>
                             <p:column headerText="Accion">
                                 <p:commandButton value="Eliminar" onclick="PF('dgEliminar').show();">
-                                    <f:setPropertyActionListener target="#{clienteBean.cliente}" value="#{cliente}" />
+                                    <f:setPropertyActionListener target="#{mascotaPorClienteBean.mascotaporcliente}" value="#{mascotaporcliente}" />
                                 </p:commandButton>
                             </p:column>
 
@@ -81,7 +75,7 @@
                 </p:panel>
                 <p:dialog id="dig" header="Eliminar registro" widgetVar="dgEliminar" showEffect="explode" hideEffect="explode" modal="true">
                     <h:form id="fromEliminar" style="text-align:center;">
-                        <p:commandButton value="Si" action="#{clienteBean.eliminar()}" update=":data:datatable" oncomplete="PF('dgEliminar').hide();"/>
+                        <p:commandButton value="Si" action="#{mascotaPorClienteBean.eliminar()}" update=":data:datatable" oncomplete="PF('dgEliminar').hide();"/>
                         <p:commandButton value="No" onclick="PF('dgEliminar').hide();" />
                     </h:form>
                 </p:dialog>
